unpackaged/main/default/objects/Coding__c/Coding__c.object-meta.xml
<CustomObject>
    <label>Coding</label>
    <nameField>
        <displayFormat>CID-{000000}</displayFormat>
        <label>Coding ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>