unpackaged/main/default/objects/Coding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coding</relationshipLabel>
    <relationshipName>Coding</relationshipName>
    <type>Lookup</type>
</CustomField>