unpackaged/main/default/objects/Coding__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Population</fullName>
            </value>
            <value>
                <fullName>Adults (36+)</fullName>
            </value>
            <value>
                <fullName>Youth (35 and under)</fullName>
            </value>
            <value>
                <fullName>Civil Society Organizations</fullName>
            </value>
            <value>
                <fullName>Human Rights Defenders at RISK</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>First funder</fullName>
            </value>
            <value>
                <fullName>Only funder</fullName>
            </value>
            <value>
                <fullName>Women (36+)</fullName>
            </value>
            <value>
                <fullName>AGYW (35 and under)</fullName>
            </value>
            <value>
                <fullName>ITGNCQ</fullName>
            </value>
            <value>
                <fullName>LGB</fullName>
            </value>
            <value>
                <fullName>Ethnic and/ Or Religious Minorities</fullName>
            </value>
            <value>
                <fullName>Farmers, Fisherfolk, Pastoralists, and Foresters</fullName>
            </value>
            <value>
                <fullName>Indigenous Peoples</fullName>
            </value>
            <value>
                <fullName>Internally Displaced Persons</fullName>
            </value>
            <value>
                <fullName>Laborers in the Informal Economy</fullName>
            </value>
            <value>
                <fullName>Migrants</fullName>
            </value>
            <value>
                <fullName>Refugees</fullName>
            </value>
            <value>
                <fullName>Sex Workers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>