unpackaged/main/default/objects/Coding__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funder Relationship</fullName>
            </value>
            <value>
                <fullName>End Beneficiary of Org</fullName>
            </value>
            <value>
                <fullName>End Beneficiary Marginalized Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>